--- a/WordsApp/app/src/main/res/values/strings.xml
+++ b/WordsApp/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 
 <resources>
     <string name="app_name">Words</string>
+    <string name="word_list_fragment_label">Words That Starts With {letter}</string>
     <string name="detail_prefix">Words That Start With</string>
     <string name="action_switch_layout">Switch Layout</string>
     <string name="look_up_word">Look up word in a Browser Search</string>
